--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "itmo-glossary",
   "version": "0.1.0",
+  "homepage": "https://dgcim1.github.io/itmo-glossary",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
